<resources>
    <string name="app_name">XRecetas</string>
    <string name="correo">Ingrese su correo eletrónico</string>
    <string name="contrasenia">Ingrese su contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="linkCrearCuenta">¿No tienes una cuenta? Regístrate</string>
    <string name="usuario">Ingrese su usuario</string>
    <string name="contrasenia2">Reingrese su contraseña</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="historial">Historial de Recetas</string>
    <string name="centros">Centros Médicos Cercanos</string>
    <string name="farmacias">Farmacias Cercanas</string>
    <string name="cercanos">Cercanos</string>
    <string name="terms">Términos y Condiciones</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="perfil">Actualizar Perfil</string>
    <string name="abrir_drawer">Open Navigation Drawer</string>
    <string name="cerrar_drawer">Close Navigation Drawer</string>
    <string name="region">Región</string>
    <string name="comuna">Comuna</string>
    <string name="afiliacion">Afiliación</string>
    <string name="btnBuscar">Buscar</string>
    <string name="ultBusqueda">Últimas Busquedas</string>
    <string name="tipo">Tipo</string>
    <string name="recetasRecientes">Recetas Recientes</string>
    <string name="ofertas">Ofertas del Día</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="ibuprofeno">Ibuprofeno</string>
    <string name="tapsin">Tapsin</string>
    <string name="btnIr">Ir</string>
    <string name="agosto">Agosto 2021</string>
    <string name="septiembre">Septiembre 2021</string>
    <string name="octubre">Octube 2021</string>
    <string name="noviembre">Noviembre 2021</string>
    <string name="diciembre">Diciembre 2021</string>
    <string name="enero">Enero 2022</string>
    <string name="actualizarFotoPeril">Actualizar Foto de Perfil</string>
    <string name="hijos">Hijos</string>
    <string name="padre">Padre</string>
    <string name="cercano">Cercano a tu Ubicación</string>
    <string name="btnAtras">Atras</string>
    <string name="btnBuscarProx">Buscar Próximo</string>
    <string name="tiempoEstimado">Tiempo estimado de llegada</string>
</resources>