<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@+id/idContenedor"
            android:layout_width="409dp"
            android:layout_height="673dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="155dp"
                android:layout_marginTop="370dp"
                android:text="@string/ofertas" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="20dp"
                android:text="@string/recetasRecientes" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="209dp"
                android:layout_height="194dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/qr" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="175dp"
                android:layout_marginTop="400dp"
                android:text="@string/ibuprofeno" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="400dp"
                android:text="@string/tapsin" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="400dp"
                android:text="@string/paracetamol" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="116dp"
                android:layout_height="109dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="450dp"
                app:srcCompat="@drawable/paracetamol" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="280dp"
                android:layout_marginTop="570dp"
                android:text="@string/btnIr" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="570dp"
                android:text="@string/btnIr" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="570dp"
                android:text="@string/btnIr" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="105dp"
                android:layout_height="107dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="450dp"
                app:srcCompat="@drawable/ibuprofeno" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="114dp"
                android:layout_height="111dp"
                android:layout_marginLeft="270dp"
                android:layout_marginTop="450dp"
                app:srcCompat="@drawable/tapsin" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_gravity="start"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu" />

</androidx.drawerlayout.widget.DrawerLayout>